# shotoswm

./: CMakeLists.txt  LICENSE  README.md  TODO  run.sh  shotoswm.c
src/: CMakeLists.txt  cursor.c  cursor.h  keyboard.c  keyboard.h  shotoswm.c  shotoswm.h
